terminada en principio

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,12 @@
 
-# .env.local 
 ENV = LOCAL
+
+######################################### MONGO ################################################
 
 MONGO_URL = "mongodb://localhost:27017"
 
+########################################## AUTH ################################################
+
 JWT_SECRET = "Esto3s1C1aveS3kreTa"
+
+################################################################################################
