--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,12 @@
 
 ENV = PRODUCTION
- 
-DATABASE_NAME=my_app_prod
+
+######################################### MONGO ################################################
 
 MONGO_URL = "mongodb://localhost:27017"
 
+########################################## AUTH ################################################
+
 JWT_SECRET = "Esto3s1C1aveS3kreTa"
+
+################################################################################################
