--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"cross-env": "^7.0.3",
 		"dotenv-flow": "^3.2.0",
 		"fastify": "^3.28.0",
+		"fastify-cors": "^6.0.3",
 		"fastify-jwt": "^4.1.3",
 		"mongodb": "^4.5.0",
 		"nodemon": "^2.0.15",
-		"pino-pretty": "^7.6.1"
+		"pino-pretty": "^7.6.1",
+		"validame": "^4.0.3"
 	},
 	"scripts": {
 		"start": "cross-env NODE_ENV=production node server.js",
