añadido endpoint para controlar carpetas

--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,5 @@ MONGO_URL = "mongodb://localhost:27017"
 JWT_SECRET = "Esto3s1C1aveS3kreTa"
 
 ################################################################################################
+
+BASE_DATA_URL = "D:\SERVER"
