--- a/.env.local
+++ b/.env.local
@@ -11,4 +11,4 @@ JWT_SECRET = "Esto3s1C1aveS3kreTa"
 
 ################################################################################################
 
-BASE_DATA_URL = "D:\SERVER"
+BASE_DATA_URL = "C:"
